//
//  UIMenu+Identifiers.swift
//  Freecell
//
//  Created by Jason Ji on 3/31/20.
//  Copyright © 2020 Jason Ji. All rights reserved.
//

import UIKit

extension UIMenu.Identifier {
    static let game = UIMenu.Identifier("Game")
    static let undo = UIMenu.Identifier("Undo")
    static let theme = UIMenu.Identifier("Theme")
    static let separator = UIMenu.Identifier("Separator")
    static let controlStyle = UIMenu.Identifier("Control Style")
    static let viewStats = UIMenu.Identifier("View Statistics")
    static let howToPlay = UIMenu.Identifier("How To Play")
}
